<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ucgen_arayuzleri</name>
  <version>0.0.0</version>
  <description>Üçgen hesaplamaları için servis arayüzleri</description>
  <maintainer email="yusufozuguzel@gmail.com">yusuf</maintainer>
  <license>Apache License 2.0</license>

  <!-- Derleme bağımlılıkları -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Çalışma zamanı bağımlılıkları -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Test bağımlılıkları -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- BURASI ÖNEMLİ -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
